--- a/src/templates/Bloglist.module.scss
+++ b/src/templates/Bloglist.module.scss
@@ -44,10 +44,10 @@
     background: #08a4b6;
     border-color: #08a4b6;
   }
-  // &:hover,&:focus {
-  //   border-color: #08a4b6;
-  //   color: #fff;
-  // }
+  &:hover,&:focus {
+    border-color: #08a4b6;
+    color: #fff;
+  }
 }
 
 
