--- a/src/scss/components/widgets.scss
+++ b/src/scss/components/widgets.scss
@@ -125,9 +125,15 @@
   }
 }
 
-.pagination a {
-    display: block;
-    padding: .5em 1em;
-    border-radius: .2em;
-    text-decoration: none;
+.pagination li {
+  margin-bottom: 0;
+    a {
+      display: block;
+      padding: .5em 1em;
+      border-radius: .2em;
+      text-decoration: none;
+    }
+    .previous, .next {
+        padding: .5em 0;
+    }
 }
