--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -3,14 +3,13 @@
 }
 .logo img {
   margin-bottom: 0;
-  margin-left: -30px;
-  height: 160px;
-  margin-top: 15px;
 }
 .logo-text {
-  font-size: 3.6rem;
+  font-size: 4rem;
   color: #000;
   font-weight: 600;
+  align-self: flex-end;
+  padding-left: 10px;
 }
 a {
   box-shadow: none;
