--- a/src/scss/base/utility.scss
+++ b/src/scss/base/utility.scss
@@ -148,3 +148,41 @@ clip: rect(0, 0, 0, 0);
 white-space: nowrap;
 border-width: 0;
 }
+
+
+.md\:hide-mobile {
+  @include respond(tab-port) {
+    display: none;
+  }
+}
+
+.sm\:width-100 {
+  @include respond(phone) {
+    width: 100%;
+  }
+}
+
+@include respond(tab-port) {
+.md\:px-2 {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+  }
+  .md\:p-1 {
+    padding: 1rem !important;
+  }
+  .md\:p-0 {
+    padding: 0rem !important;
+  }
+  .md\:mb-0 {
+    margin-bottom: 0 !important;
+  }
+  .md\:mb-3 {
+    margin-bottom: 3rem !important;
+  }
+  .md\:p-2 {
+    padding: 2rem !important;
+  }
+  .md\:p-6 {
+    padding: 6rem !important;
+  }
+}
