--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -3,6 +3,10 @@
 }
 .logo img {
   margin-bottom: 0;
+  @include respond(tab-port) {
+    width: 60px;
+    height: 60px;
+  }
 }
 .logo-text {
   font-size: 4rem;
@@ -10,13 +14,28 @@
   font-weight: 600;
   align-self: flex-end;
   padding-left: 10px;
+  @include respond(tab-port) {
+    font-size: 2.8rem;
+    max-width: 14rem;
+  }
 }
 a {
   box-shadow: none;
 }
-
+.header_block {
+  width: 330px;
+  border-right: 1px dashed #ddd;
+}
 .border-color {
   border-color: #e0d7cc;
+}
+.aside_block {
+  position: fixed;
+  height: 100vh;
+  @include respond(tab-port) {
+    position: static;
+    height: auto;
+  }
 }
 // .app-logo__box {
 //   background: $logo-color;
