--- a/src/scss/layout/layout.scss
+++ b/src/scss/layout/layout.scss
@@ -78,4 +78,7 @@
     position: relative;
     border-bottom: 1px dashed #ddd;
     padding-bottom: 30px;
+    @include respond(tab-port) {
+      padding-bottom: 1.5rem;
+    }
 }
