Adding dark mode theme

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -52,7 +52,7 @@ body.dark {
   --textNormal: rgba(255, 255, 255, 0.88);
   --textTitle: white;
   --textHeadingOne: hsla(351, 90%, 80%, 1);
-  --textButton: #f0f0f;
+  --textButton: #f0f0f0;
   --textUltraGray: hsla(45, 81%, 62%, 0.01);
   --textLink: hsla(230, 100%, 67%, 1);
   --border: hsl(45deg 100% 80% / 11%);
