--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -45,6 +45,10 @@
 .checkbox-group {
   display: flex;
   align-items: center;
+  @include respond(tab-port) {
+    position: absolute;
+    right: 0;
+  }
   label {
     padding-left: 5px;
   }
