--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -41,8 +41,10 @@ body {
   --hr: hsla(0, 0%, 0%, 0.2);
   --textUltraGray: rgba(0,0,0,.05);
   --border: #ddd;
+  --tagsBG: rgba(0,0,0,.05);
   background-color: var(--bg);
   --color-toggle: #000;
+  --codebg: #f5f2f0;
 }
 
 body.dark {
@@ -58,6 +60,8 @@ body.dark {
   --border: hsl(45deg 100% 80% / 11%);
   --hr: hsla(0, 0%, 100%, 0.2);
   --color-toggle: hsla(45, 81%, 62%, 1);
+  --codebg: #051619;
+  --tagsBG: hsla(352, 91%, 68%, 1);
 }
 // @media (min-width: 812px) and (max-width: 1024px) {
 //     .container {
