--- a/src/scss/base/utility.scss
+++ b/src/scss/base/utility.scss
@@ -188,6 +188,9 @@ border-width: 0;
   .md\:p-2 {
     padding: 2rem !important;
   }
+  .md\:p-4 {
+    padding: 4rem !important;
+  }
   .md\:p-6 {
     padding: 6rem !important;
   }
