--- a/src/scss/layout/layout.scss
+++ b/src/scss/layout/layout.scss
@@ -82,3 +82,40 @@
       padding-bottom: 1.5rem;
     }
 }
+
+
+
+/* Adjust the position of the line numbers */
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding-left: 2.8em;
+}
+
+/**
+ * If you only want to use line numbering
+ */
+
+pre[class*="language-"] {
+    background: var(--codebg);
+
+}
+code[class*="language-"] {
+  color: var(--textNormal);
+  text-shadow: none;
+}
+.gatsby-highlight {
+  background-color: var(--codebg);
+  border-radius: 0.3em;
+  margin: 3rem 0;
+  padding: 1em;
+  overflow: auto;
+}
+
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding: 0;
+  padding-left: 2.8em;
+  overflow: initial;
+}
+
+.token.operator, .token.entity, .token.url, .language-css .token.string, .style .token.string {
+  background: transparent;
+}
