--- a/src/scss/base/grid.scss
+++ b/src/scss/base/grid.scss
@@ -13,6 +13,11 @@
       grid-template-columns: none !important;
   }
 }
+.md\:grid-cols-none {
+  @include respond(tab-land) {
+      grid-template-columns: none !important;
+  }
+}
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
